# linux-ls

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/dir_reader/: dir_reader.c  dir_reader.h
lib/parser/: parser.c  parser.h
lib/parsing_flags/: parsing_flags.h
source/: CMakeLists.txt  main.c
